Fix classic css bleedover into modern design view

--- a/appinventor/appengine/src/com/google/appinventor/client/style/GSoC/modern.css
+++ b/appinventor/appengine/src/com/google/appinventor/client/style/GSoC/modern.css
@@ -77,6 +77,7 @@ they get cut off in Windows.
     /*all:unset;*/
     background-image: unset;
     margin: unset;
+    background-color: unset;
   }
   .ode-Box-toolkit {
     /*all: unset;*/
@@ -394,6 +395,7 @@ they get cut off in Windows.
     min-height: 48px;
     margin-bottom: 4px;
     background-color: background-color;
+    background-image: unset;
   }
   
   /*.ode-Logo {
@@ -628,14 +630,21 @@ they get cut off in Windows.
     cursor: pointer;
   }
   
-  .gwt-Tree .gwt-TreeItem-selected {
-    background-color: rgba(167, 36, 122, 0.21);
+  .gwt-Tree .gwt-TreeItem-selected span,
+  .gwt-Tree .gwt-TreeItem-selected span:hover
+  {
+    background-color: rgba(167, 36, 122, 0.21) !important;
   }
-  
+
+  .gwt-Tree .gwt-TreeItem span,
   .gwt-Tree .gwt-TreeItem span:hover {
-    color: rgba(167, 36, 122, 0.21);
+    background-color: background-color ;
   }
-  
+
+  .gwt-Tree .gwt-TreeItem span:hover {
+    color: rgba(167, 36, 122, 1);
+  }
+
   /* Young Android Toolbar */
   
   .ya-Toolbar {
@@ -717,8 +726,6 @@ they get cut off in Windows.
   
   .ode-TextButton:active,
   .gwt-Button:active {
-    /* -webkit-box-shadow: inset 0 2px 4px button-shadow-color, 0 1px 2px rgba(0, 0, 0, 0.05);
-    -moz-box-shadow: inset 0 2px 4px button-shadow-color, 0 1px 2px rgba(0, 0, 0, 0.05); */
     box-shadow: inset 0 2px 4px button-shadow-color, 0 1px 2px rgba(0, 0, 0, 0.05);
   }
   
@@ -746,11 +753,6 @@ they get cut off in Windows.
   .ode-BlocksDesignerButton {
     color: background-color;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    /* *background-color: #f89406; warning
-    background-image: -moz-linear-gradient(top, #fbb450, #f89406);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbb450), to(#f89406));
-    background-image: -webkit-linear-gradient(top, #fbb450, #f89406);
-    background-image: -o-linear-gradient(top, #fbb450, #f89406); */
     background-image: linear-gradient(to bottom, #fbb450, #f89406);
     background-repeat: repeat-x;
     border-color: #f89406 #f89406 #ad6704;
@@ -764,7 +766,6 @@ they get cut off in Windows.
   .ode-BlocksDesignerButon:disabled {
     color: background-color;
     background-color: #f89406;
-    /* *background-color: #df8505; warning */
     transition: background-position 0.1s linear;
   }
   
@@ -862,10 +863,20 @@ they get cut off in Windows.
     background-color: #D6E9F8;
     color: tab-bar-color;
   }
-  
+
+  .ode-PropertiesPanel {
+    background-color: background-color;
+  }
+
   .ode-PropertiesPanel td {
     color: context-menu-color;
     font-size: 14px;
+  }
+
+  .ode-PropertiesPanel .gwt-DisclosurePanel > tbody > tr > td > a {
+    background-color: background-color;
+    border: thin solid #CCCCCC;
+    padding-left: 5px;
   }
   
   .ode-PropertiesComponentName {
@@ -902,10 +913,6 @@ they get cut off in Windows.
   
   .ode-ChoicePropertyEditor:focus {
     border-color: #D3D3D3;
-    /* IE6-9 */
-  
-    /* -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #D3D3D3; warning
-    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #D3D3D3; */
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #D3D3D3;
   }
   
@@ -920,10 +927,6 @@ they get cut off in Windows.
   }
   
   .ode-ColorChoicePropertyEditor:focus {
-    /* IE6-9 */
-  
-    /* -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0); warning
-    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0); */
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0);
   }
 
